src/main/java/org/example/lexer/error/UnkownTokenException.java
package org.example.lexer.error;

public class UnkownTokenException extends Exception {
    public UnkownTokenException(String msg) {super(msg);}
}
